fix(examples): :wrench: update configuration files

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1078,189
+Pos=828,233
 Size=550,680
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=1060,120
+Size=762,902
 Collapsed=0
 
