--- a/pom.xml
+++ b/pom.xml
@@ -377,7 +377,8 @@
               <manifest>
                 <addClasspath>true</addClasspath>
                 <classpathPrefix>lib/</classpathPrefix>
-                <mainClass>fr.l3alr0g.spinel.examples.Demo</mainClass>
+                <mainClass>fr.l3alr0g.spinel.examples.PlaneDemo</mainClass>
+                <mainClass>fr.l3alr0g.spinel.examples.RotationDemo</mainClass>
               </manifest>
             </archive>
           </configuration>
