feat: write matrix-vector product methods

--- a/pom.xml
+++ b/pom.xml
@@ -431,6 +431,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+            <forkMode>always</forkMode>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
